--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "proxy": "http://localhost:3001",
