--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "lint": "eslint .",
+    "build:client": "rm -rf build && cd client && npm run build && cp -r build ../",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Julius Lubys",
