--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js",
     "lint": "eslint .",
     "build:client": "rm -rf build && cd client && npm run build && cp -r build ../",
+	"doAll": "npm run build:client && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Julius Lubys",
