--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "lint": "eslint .",
     "build:client": "rm -rf build && cd client && npm run build && cp -r build ../",
-	"doAll": "npm run build:client && npm run dev",
+    "doAll": "npm run build:client && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Julius Lubys",
@@ -19,10 +19,12 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
