--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-number-format": "^4.4.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
