--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "cypress": "^6.6.0",
+    "cypress-file-upload": "^5.0.2",
     "eslint": "^7.19.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "nodemon": "^2.0.7"
   }
 }
