Adding project back end to Heroku and front end to Netlify

--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "redux-thunk": "^2.3.0",
     "yup": "^0.32.8"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://own-news-app.herokuapp.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
