--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "https://julius-news-app.netlify.app",
   "browserslist": {
     "production": [
       ">0.2%",
