--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://own-news-app.herokuapp.com",
   "browserslist": {
     "production": [
       ">0.2%",
